[upd] creating multiple pipelines from configuration file